# BELLA

./: .gitignore  .gitmodules  .sd_0001.fastq.icloud  BWAparser.py  Buffer.c  Buffer.h  Kmer.cpp  Kmer.hpp  License.txt  Makefile  ParallelFASTQ.h  README.md  SAMparser.py  TESTGenome.fna  auto-range.cpp  bella  bella-amd-epyc-7571-exe  chain.h  common.h  core  ecsample_singlemapped_q10.txt  finalDataset17.csv  finalDataset19.csv  fq_reader.c  hash_funcs.c  histo.csv  jobCoriDemo  kmercount.h  kmerplots_test.cpp  listofdata.txt  mafconvert.py  main.cpp  main.cu  makefile  makefile-ascent  makefile-mac  makefile-nersc  markov.h  memcheck.txt  memcheckecoli.out  (+20 more)
analysis/: IntervalTree.h  README.md  benchmark.cpp  benchmark.h  chainedMarkov.py  checkOutput.cpp  checkOutput.py  evaluation  evaluation.cpp  evaluation.h  exactMarkov.py  example-translation-environment.sh  filterby_overlap_length.py  makefile  multipleMarkov.py  nnzCount.py  ovlParser.py  parserLAdump.py  tinytest.dump  transixMarkov.py  translateDalignerOut.sh  truepositiveDiff.cpp  zip_tag.py
bench/: IntervalTree.h  Makefile  bench  bench.cpp  common.h  def.h  evaluation.cpp  evaluation.h  lostintranslation.cpp  lostintranslation.h  onlyoverlap.h  overlapper.h  truth.h  utils.h
benchmark/: Makefile  lostintranslation.h
dataset/selfSampleData/: README  pacbio.spec
gerbil/: CMakeLists.txt  Makefile  README.md  core
gerbil/include/gerbil/: Application.h  FastParser.h  KmcWriter.h  config.h
gerbil/src/cuda_ds/: AddKernel.cu  CompressKernel.cu
gerbil/src/gerbil/: Application.cpp  FastParser.cpp  KmcWriter.cpp  gerbil.cpp
gpu/: kmer_count_kernels.h
gpu/bloom-gpu/: bloom_test  bloom_test.cu  fhash.h
include/: align.hpp  bloomfilter.hpp  chain.hpp  kmercount.hpp  markov.hpp  minimizer.hpp  overlap.hpp  sequence.hpp  syncmer.hpp
include/common/: CSC.h  CSR.h  Deleter.h  HeapEntry.h  bellaio.h  common.h  overridenew.h  transpose.h
include/kmerselect/: kmercount.h  minimizer.h
include/readalign/: align.h
include/readoverlap/: overlapping.h
kmercode/: Kmer.cpp  Kmer.hpp  ParallelFASTQ.h  bound.cpp  bound.hpp  common.h  fq_reader.c  fq_reader.h  hash_funcs.h  hyperloglog.hpp  main.cpp  makefile  rbounds.cpp  rbounds.hpp  usage
libbloom/: CMakeLists.txt  Makefile  bloom.h  bloom64.c  bloom64.cpp  bloom64.h
libbloom/murmur2/: CMakeLists.txt
libcuckoo/: cuckoohash_map.hh
libgaba/: bench  example  gaba.c  gaba.h  unittest
loganGPU/: functions.cuh  logan.cuh  score.cuh  seed.cuh
loganSIMD/: demo.cpp  logan.h  score.h  simdutils.h  tester.py  utils.h
minimap/: kalloc.h  minimap.h  sketch.h
mtspgemm2017/: AMGGraph.h  CSC.cpp  CSC.h  CSV.cpp  CSV.h  HeapEntry.h  IO.h  IntervalTree.h  Triple.h  adaptive.h  align.h  alignment.h  alncommon.h  benchmark.cpp  benchmark.h  common.h  compute-delta.h  cum.py  detect.h  divergence.h  estimationfilter.h  filter.h  global.h  makefile  metric.h  mkl_free_main.cpp  multiply.h  overlapping.h  parsehisto.c  statistics.h  transpose.h  true-overlap.h  utility.h
ond_aligner/: .gitignore  Makefile  align.c  align.h  driver.c
optlist/: Makefile
prec/: finalDataset15.csv  kmer-matching.cpp  kmer-occurrences.c  kmerInsertion.cpp  trie-tree-with-posix.cpp
report/: Makefile  report.aux  report.bbl  report.bib  report.blg  report.tex
sanitytests/: reversecomptest.fastq  reversecomptest.txt
script/: ErrorFromFastq.py  KmerProbability.py  README.md  bella-pipeline-batch1.sh  bella-pipeline-batch2.sh  bella-pipeline-ecsample-summary.csv  run-batch.sh  run-bella-pipeline.sh  run-bella-pipeline2.sh
src/: CSC.cpp  CSR.cpp  main.cpp  main.cu  mkl_free_main.cpp
xavier/: README.md  demo.cpp  makefile  score.h  simdutils.h  utils.h  xavier.h
(+922 files in other folders)
